--- a/src/main/resources/templates/views/mypage/mypageComment.html
+++ b/src/main/resources/templates/views/mypage/mypageComment.html
@@ -1,229 +1,178 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout}">
+      layout:decorate="~{layout/layout}">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>502 study</title>
-	<link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Gaegu&family=Jua&family=Nanum+Pen+Script&family=Playwrite+AU+SA:wght@100..400&family=Single+Day&display=swap" rel="stylesheet">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
-     
-   <style>
-       body *{
-           font-family: 'Jua';
-       }
-       
-       /*뒤로가기 버튼 + 제목 */
-       .header {
-       	 padding : 2rem;
-       	 display : flex;
-       	 align-items : center;
-       }
-		.back-btn {
-		  width: 1.5rem;
-		  margin-right : 1rem;
-		}
-		
-		.title {
-			display : inline-block;
-			padding-top : 0.7rem;
-			font-size : 1.5rem;
-		}
-		
-		/*상단 뱃지*/
-		.box {
-			display : flex;
-			justify-content : center;
-		}
-		
-		.box-title1 {
-			width : 8rem;
-			height : 3rem;
-			border-radius : 7px 0px 0px 7px;
-			border : 1px solid #8AA7AF;
-			background-color : #FFF;
-			text-align : center;
-						
-			display: flex;
-	        align-items: center; /* 세로 중앙 정렬 */
-	        justify-content: center; /* 가로 중앙 정렬 */
-		}
-		
-		.box-title2 {
-			width : 8rem;
-			height : 3rem;
-			border-radius : 0px 7px 7px 0px;
-			border : 1px solid #8AA7AF;
-			background-color : #D7E1E4;
-			text-align : center;
-						
-			display: flex;
-	        align-items: center; /* 세로 중앙 정렬 */
-	        justify-content: center; /* 가로 중앙 정렬 */
-		}
-		
-		/*텍스트 수직 가운데 정렬*/
-		.box-title1 h6 {
-			margin : 0; /*기본 마진 제거*/
-			line-height : 1.7rem;
-		}
-		.box-title2 h6 {
-			margin : 0; /*기본 마진 제거*/
-			line-height : 1.7rem;
-		}
-		
-		/*뱃지 리스트*/
-		.badge-list {
-			display : flex;
-			padding-bottom : 2rem;
-		}
-		
-		.badge1 {
-			width : 100px;
-			height : 200px;
-			border : 1px solid #ccc;
-			border-radius : 10px;
-			margin-top : 2rem;
-			margin-left : auto;
-			margin-right : auto;
-			background-color : #E6F2F5;
-			box-shadow : 1px 5px 5px 1px #ccc;
-		}
-		
-		.badge-image {
-			width : 70px;
-			height : 70px;
-			display : block;
-			margin-left : auto;
-			margin-right : auto;
-			margin-top : 20px;
-		}
-		
-		.content {
-			text-align : center;
-			border-radius : 20px 20px 10px 10px;
-			width : 100px;
-			height : 100px;
-			padding-top : 1rem;
-			margin-top : 0.6rem;
-			background-color : #fff;
-		}
-		
-		.content p {
-			color : #8C8C8C;
-			font-size : 0.8rem;
-		}
-		
-		.box-content {
-			margin : 1.5rem auto;
-			border : 1px solid #ccc;
-			border-radius : 20px;
-			width : 350px;
-			height : 200px;
-			box-shadow : 2px 5px 5px 2px #ccc;
-		}
-		
-		.box-content-in {
-			display : flex;
-		}
-		
-		.category {
-			width : 5rem;
-			height : 2rem;
-			text-align : center;
-			margin-left : auto;
-			margin-top : 1rem;
-			margin-right : 1rem;
-			border-radius : 5px;
-			background-color : #EFEFEF;
-			
-			display: flex;
-	        align-items: center; /* 세로 중앙 정렬 */
-	        justify-content: center; /* 가로 중앙 정렬 */
-		}
-		
-		.category p {
-			margin-bottom : 0px;
-		}
-		
-		.box-content h5 {
-			padding-top : 25px;
-			padding-left : 25px;
-			margin-bottom : 0px;
-		}
-		
-		.data {
-			padding : 0 25px;
-			margin-bottom : 0.1rem;
-			margin-top : 0;
-		}
-		
-		.explan {
-			padding : 0 20px;
-			margin-bottom : 0.1rem;
-			margin-top : 0;
-			font-size : 1rem;	
-		}
-		
-		.box-content hr {
-			margin-top : 0;
-		}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>나의 활동</title>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Gaegu&family=Jua&family=Nanum+Pen+Script&family=Playwrite+AU+SA:wght@100..400&family=Single+Day&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <style>
+        body * {
+            font-family: 'Jua';
+        }
 
-</style>
+        .header {
+            padding: 1rem;
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+        }
+
+        .back-btn {
+            font-size: 1.5rem;
+            margin-right: 1rem;
+            color: #333;
+            cursor: pointer;
+        }
+
+        .title {
+            font-size: 1.3rem;
+            margin: 0;
+            color: #333;
+        }
+
+        .tab-container {
+            display: flex;
+            margin: 1rem;
+            border-radius: 8px;
+            overflow: hidden;
+            padding-bottom : 2rem;
+            padding-left : 3rem;
+        }
+
+        .tab1 {
+            flex: 0.4;
+            padding: 0.8rem;
+            text-align: center;
+            cursor: pointer;
+            border: 1px solid #8AA7AF;
+            border-radius : 10px 0px 0px 10px;
+            background-color: #fff;
+            color: #000;
+            font-size: 1rem;
+        }
+
+        .tab2 {
+            flex: 0.4;
+            padding: 0.8rem;
+            text-align: center;
+            cursor: pointer;
+            border: 1px solid #8AA7AF;
+            background-color: #D7E1E4;
+            color: #000;
+            font-size: 1rem;
+            border-radius : 0px 10px 10px 0px;
+        }
+
+        .comment-container {
+            padding: 0 1rem;
+        }
+
+        .comment-item {
+            background: #fff;
+            border-radius: 20px;
+            padding: 1.2rem;
+            margin-bottom: 1rem;
+            border : 1px solid #ccc;
+            box-shadow : 2px 5px 5px 2px #ccc;
+            width : 22rem;
+            margin-left : 1rem;
+        }
+
+        .comment-content {
+            font-size: 0.95rem;
+            line-height: 1.5;
+            margin-bottom: 0.8rem;
+            color: #333;
+            white-space: pre-wrap;
+        }
+
+        .comment-date {
+            color: #888;
+            font-size: 0.8rem;
+        }
+        
+        .board-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .hashtag-list {
+            text-align: right;
+        }
+
+        .hashtag {
+            width : 5rem;
+            height : 1.5rem;
+            text-align : center;
+            margin-left : auto;
+            margin-right : 0.2rem;
+            border-radius : 5px;
+            background-color : #EFEFEF;
+
+            display: flex;
+            align-items: center; /* 세로 중앙 정렬 */
+            justify-content: center; /* 가로 중앙 정렬 */
+        }
+
+        .no-comments {
+            text-align: center;
+            padding: 2rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
 <div layout:fragment="content">
-	<div class="header">
+    <div class="header">
         <i class="bi bi-arrow-left back-btn"></i>
         <script>
         	$('.back-btn').click(function(){
         		window.location.href = '/mypage';
         	})
         </script>
-		<h3 class="title"> 나의 활동 </h3>
-	</div>
-	<div class="box">
-		<div class="box-title1" th:data-user-id="${dto.id}">
-			<h6> 내 게시물 </h6>
-		    <script>
-				$(document).ready(function() {
-					$('.box-title1').click(function() {
-						var userId = $(this).data('userId');
-						if (userId) {
-							window.location.href = '/mypageActive?id=' + userId;
-						} else {
-							alert('사용자 정보를 찾을 수 없습니다.');
-						}
-					});
-				});
-			</script>
-		</div>
-		<div class="box-title2">
-			<h6> 내가 쓴 댓글 </h6>
-		</div>
-	</div>
-	
-	<!-- 댓글 목록 -->
-	<div th:if="${comments != null and !comments.empty}">
-		<div th:each="comment : ${comments}" class="box-content">
-			<div class="box-content-in">
-				<h5 th:text="${comment.postTitle}"></h5>
-				<div class="category">
-					<p th:text="${comment.postType}"></p>
-				</div>
-			</div>
-			<p class="data" th:text="${#dates.format(comment.commentDate, 'yyyy.MM.dd HH:mm')}"></p>
-			<hr>
-			<p class="explan" th:text="${comment.content}"></p>
-		</div>
-	</div>
-	
-	<div th:if="${comments == null or comments.empty}" class="text-center p-5">
-		<h3>작성한 댓글이 없습니다.</h3>
-	</div>
+        <h2 class="title">나의 활동</h2>
+    </div>
+
+    <div class="tab-container">
+        <div class="tab1" th:data-user-id="${session.userId}">내 게시물</div>
+        <script th:inline="javascript">
+            $(document).ready(function() {
+                var userId = /*[[${session.userId}]]*/ null;
+                
+                $('.tab1').click(function() {
+                    if (userId) {
+                        window.location.href = '/mypageActive?id=' + userId;
+                    } else {
+                        alert('로그인이 필요합니다.');
+                        window.location.href = '/login';
+                    }
+                });
+            });
+        </script>
+        <div class="tab2">내가 쓴 댓글</div>
+    </div>
+
+    <div class="comment-container">
+        <div th:if="${commentList != null and !commentList.empty}">
+            <div th:each="comment : ${commentList}" class="comment-item">
+                <div class="comment-content" th:text="${comment.comment}"></div>
+                <div class="board-footer">
+                    <div class="comment-date" th:text="${#dates.format(comment.createdAt, 'yyyy.MM.dd HH:mm')}"></div>
+                    <div class="hashtag-list" th:if="${comment.hashtags != null and !comment.hashtags.empty}">
+                        <span th:each="tag : ${comment.hashtags}" class="hashtag" th:text="${'#' + tag.tag}"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div th:if="${commentList == null or commentList.empty}" class="no-comments">
+            <p>작성한 댓글이 없습니다.</p>
+        </div>
+    </div>
 </div>
 </body>
 </html>
