"Merge mypage & board & userpage"

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -27,13 +27,21 @@
             <div class="nav-text">기록</div>
         </a>
 
-        <a th:href="@{/community}" class="nav-item" th:classappend="${currentPage == 'community'} ? 'active' : ''">
+        <a th:href="@{/feed/all}" class="nav-item" th:classappend="${currentPage == 'community'} ? 'active' : ''">
             <div class="nav-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
                     <path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z" />
                 </svg>
             </div>
             <div class="nav-text">커뮤니티</div>
+          	<script>
+	            $(document).ready(function(){
+	            	$('.nav-text').click(function() {
+	            		window.location.href = '/feed/all';
+	            	});
+	            });
+            </script>
+            
         </a>
         <a th:href="@{/friends}" class="nav-item" th:classappend="${currentPage == 'friends'} ? 'active' : ''">
             <div class="nav-icon">
