--- a/src/main/resources/templates/views/mypage/mypageUpdate.html
+++ b/src/main/resources/templates/views/mypage/mypageUpdate.html
@@ -62,6 +62,11 @@
                 <label for="goalWeight">목표 체중 (kg)</label>
                 <input type="number" class="form-control" id="goalWeight" th:field="*{goalWeight}" required>
             </div>
+            
+            <div class="form-group">
+                <label for="myIntro">소개</label>
+                <input type="text" class="form-control" id="myIntro" th:field="*{myIntro}" required>
+            </div>
 
             <div class="form-group">
                 <label>활동 수준</label>
