--- a/src/main/resources/templates/views/userpage/userpage.html
+++ b/src/main/resources/templates/views/userpage/userpage.html
@@ -59,8 +59,18 @@
 		    </div>
 		</div>
 		
-		<div class="calendar-container">
-		    <div id="calendar"></div>
+		<div class="calendar-section">
+		    <h3>일일 통계 캘린더</h3>
+		    <div class="calendar-container">
+		        <div class="calendar-header">
+		            <button id="prevMonth">&lt;</button>
+		            <span id="currentMonth"></span>
+		            <button id="nextMonth">&gt;</button>
+		        </div>
+		        <div class="calendar" id="calendar">
+		            <!-- 캘린더 내용이 여기에 동적으로 추가됩니다 -->
+		        </div>
+		    </div>
 		</div>
     </div>
 </div>
