--- a/src/main/resources/static/css/mypage/mypage.css
+++ b/src/main/resources/static/css/mypage/mypage.css
@@ -6,7 +6,7 @@ body * {
 
 /*뒤로가기 버튼 + 제목 */
 .header {
-	padding: 2rem;
+	padding: 1rem;
 	display: flex;
 	align-items: center;
 }
@@ -29,24 +29,60 @@ body * {
 
 /* 프로필 사진 라인 */
 .profile {
-	padding-left: 2rem;
 	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
 }
 
 .my-profile-image {
-	border-radius: 100%;
-	width: 5rem;
-	height: 5rem;
+	width: 6rem;
+	height: 6rem;
+	border-radius: 50%;
 	object-fit: cover;
+	margin-right: 1rem;
+	margin-left : 1.5rem;
+	margin-top : 1rem;
 }
 
-.profile-in {
-	padding-left: 1.3rem;
+.profile-info {
+	flex: 1;
+}
+
+.username {
+	margin-left : 1.5rem;
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+
+.info {
+	margin-left : 1.5rem;
+	color: #666;
+	margin-bottom: 20px;
+}
+
+.profile-stats {
+	display: flex;
+	justify-content: space-around;
+}
+
+.stat-item {
+	text-align: center;
+}
+
+.stat-number {
+	font-size: 18px;
+	font-weight: bold;
+	color: #005666;
+}
+
+.stat-label {
+	font-size: 14px;
+	color: #666;
 }
 
 .my-intro {
-	padding-left: 2rem;
-	padding-top: 0.7rem;
+	padding-left: 1.5rem;
 }
 
 /*내 업적 부분*/
