--- a/src/main/resources/static/css/mypage/mypage_badge.css
+++ b/src/main/resources/static/css/mypage/mypage_badge.css
@@ -6,7 +6,7 @@ body * {
 
 /*뒤로가기 버튼 + 제목 */
 .header {
-	padding: 2rem;
+	padding: 1rem;
 	display: flex;
 	align-items: center;
 }
@@ -34,6 +34,7 @@ body * {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin-bottom : 1.5rem;
 }
 
 .box-title h6 {
