--- a/src/main/resources/templates/views/friendpage/friendrequestpage.html
+++ b/src/main/resources/templates/views/friendpage/friendrequestpage.html
@@ -53,7 +53,7 @@
 						<th:block th:each="friend : ${recommandFriends}">
 							<div class="recommand-friend-wrapper">
 								<div class="comment">Wellfit의 추천</div>
-								<img th:src="${friend.profileImage}">
+								<img th:src="@{'/images/' + ${friend.profileImage}}"/>
 								<div th:text="${friend.nickname}" class="name"></div>
 								<div th:text="${friend.myIntro}" class="intro"></div>
 
@@ -69,7 +69,7 @@
 					</th:block>
 					<th:block th:each="req : ${requests}">
 						<div class="friend-accept-wrapper">
-							<img th:src="${senderMap[req.senderId].profileImage}">
+							<img th:src="@{ '/images/' + ${senderMap[req.senderId].profileImage} }"/>
 							<div class="profile">
 								<div th:text="${senderMap[req.senderId].nickname}" class="name"></div>
 								<div th:text="${req.requestMessage}" class="intro"></div>
