--- a/src/main/resources/templates/views/loginpage/loginpage.html
+++ b/src/main/resources/templates/views/loginpage/loginpage.html
@@ -19,7 +19,7 @@
 <div layout:fragment="content">
     <div class="login-container">
         <div class="comment">로그인</div>
-        <form method="post" action="/login">
+        <form method="post" action="/logincheck">
             <div class="mb-3">
                 <input type="email" class="input-field" name="email" placeholder="이메일" required>
             </div>
