병합 전 개인브랜치 푸시

--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -34,6 +34,12 @@
 <!-- 본문 영역 -->
 <main>
     <div class="container">
+        <div id="toast-container">
+            <div id="toast-message" class="toast-message">
+                <span id="toast-text"></span>
+            </div>
+        </div>
+        
         <div layout:fragment="content">
             <!-- 각 페이지의 실제 내용 -->
         </div>
