--- a/src/main/resources/templates/chat/chatroomForm.html
+++ b/src/main/resources/templates/chat/chatroomForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout/layoutMain}" xmlns:layout="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     <script th:src="@{/js/chat/chatroomForm.js}"></script>
 </head>
 <body>
-<div layout:fragment="content">
+<div >
     <form action="./create" method="post" enctype="multipart/form-data">
         <table class="table table-bordered">
             <tr>
