--- a/src/main/resources/templates/chat/test.html
+++ b/src/main/resources/templates/chat/test.html
@@ -13,7 +13,7 @@
     document.querySelector(".btn").addEventListener("click", function (){
         let userId = document.querySelector(".userId").value;
         console.log("userId : " +userId);
-        let url = "http://localhost:8080/chatroom/list/"+userId;
+        let url = "http://localhost:8080/chat/list/"+userId;
         location.href= url;
     });
 </script>
