--- a/src/main/resources/templates/chat/chatroomList.html
+++ b/src/main/resources/templates/chat/chatroomList.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" th:href="@{/css/chat/chatroomList.css}">
         <!-- 인라인 스타일로 작성할 경우 -->
     </th:block>
-
+    <!-- Bootstrap Bundle (with Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 <!-- 페이지 내용 -->
@@ -22,9 +23,9 @@
         <a href="/chatroom/form" class="btn btn-success">채팅방 생성</a>
     </div>
     <div class="toggle-buttons">
-        <a href="#" class="btn btn-openchat active">오픈채팅</a>
+        <a class="btn btn-openchat active">오픈채팅</a>
         <div class="toggle-divider"></div>
-        <a href="#" class="btn btn-mychat">나의 채팅방</a>
+        <a class="btn btn-mychat">나의 채팅방</a>
     </div>
     <div class="chatroom-list"></div> <!-- AJAX로 가져온 채팅방 리스트를 여기에 추가 -->
 
@@ -43,7 +44,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-                    <a href="#" class="btn btn-primary btn-enter-chat">입장</a>
+                    <a class="btn btn-primary btn-enter-chat">입장</a>
                 </div>
             </div>
         </div>
