--- a/src/main/resources/templates/views/loginpage/inputdata1.html
+++ b/src/main/resources/templates/views/loginpage/inputdata1.html
@@ -26,70 +26,66 @@
 		<div class="current-step">1</div>
 		<div class="step">2</div>
 	</div>
-	<div class="content-container">
+
+	<form method="post" action="/updateinputdata1" class="content-container">
 		<div class="notice">기본 정보를 알려주세요.</div>
+			<div class="value-container">
+			    <div class="value-category">성별</div>
+			    <div class="value-select-wrapper">
+			        <input type="radio" id="female" name="gender" class="value-select-radio" value="female" hidden checked>
+			        <label for="female" class="value-select1">여성</label>
+			
+			        <input type="radio" id="male" name="gender" class="value-select-radio" value="male" hidden>
+			        <label for="male" class="value-select1">남성</label>
+			    </div>
+			</div>
+			
+			<div class="input-container">
+				<div class="input-wrapper">
+					<div class="value-category">나이</div>
+					<input class="value-input" name="age" placeholder="0">
+					<span class="unit">세</span>
+				</div>
+				<div class="input-wrapper">
+					<div class="value-category">키</div>
+					<input class="value-input" name="height" placeholder="0">
+					<span class="unit">cm</span>
+				</div>
+			</div>
+			
+			<div class="input-container">
+				<div class="input-wrapper">
+					<div class="value-category">현재 체중</div>
+					<input class="value-input weight-input" name="currentWeight" type="number" step="0.1" min="0" placeholder="0.0">
+					<span class="unit">Kg</span>
+				</div>
+				<div class="input-wrapper">
+					<div class="value-category">목표 체중</div>
+					<input class="value-input weight-input" name="goalWeight" type="number" step="0.1" min="0" placeholder="0.0">
+					<span class="unit">Kg</span>
+				</div>
+			</div>
+
+			<div class="value-container">
+				<div class="value-category">활동량</div>
+				<div class="value-select-wrapper">
+					<input type="radio" id="Sedentary" value="Sedentary" name="activityLevel" class="value-select-radio" hidden checked> 
+					<label for="Sedentary" class="value-select2">매우 적음</label> 
+					<input type="radio" id="Lightly Active" value="Lightly Active" name="activityLevel" class="value-select-radio" hidden> 
+					<label for="Lightly Active" class="value-select2">적음</label>
+					<input type="radio" id="Moderately Active" value="Moderately Active" name="activityLevel" class="value-select-radio" hidden> 
+					<label for="Moderately Active" class="value-select2">보통</label> 
+					<input type="radio" id="Very Active" value="Very Active" name="activityLevel" class="value-select-radio" hidden> 
+					<label for="Very Active" class="value-select2">많음</label>
+				</div>
 	
-		<div class="value-container">
-		    <div class="value-category">성별</div>
-		    <div class="value-select-wrapper">
-		        <input type="radio" id="female" name="gender" class="value-select-radio" hidden checked>
-		        <label for="female" class="value-select1">여성</label>
-		
-		        <input type="radio" id="male" name="gender" class="value-select-radio" hidden>
-		        <label for="male" class="value-select1">남성</label>
-		    </div>
-		</div>
-	
-		<div class="input-container">
-			<div class="input-wrapper">
-				<div class="value-category">나이</div>
-				<input class="value-input" placeholder="0">
-				<span class="unit">세</span>
+				<div class="value-detail-wrapper" id="activity-detail">
+					<div class="value-detail" id="activity-main">거의 앉아서 생활</div>
+					<div class="value-detail" id="activity-sub">(사무직, 재택근무 등)</div>
+				</div>
 			</div>
-			<div class="input-wrapper">
-				<div class="value-category">키</div>
-				<input class="value-input" placeholder="0">
-				<span class="unit">cm</span>
-			</div>
-		</div>
-		
-		<div class="input-container">
-			<div class="input-wrapper">
-				<div class="value-category">현재 체중</div>
-				<input class="value-input" placeholder="0">
-				<span class="unit">Kg</span>
-			</div>
-			<div class="input-wrapper">
-				<div class="value-category">목표 체중</div>
-				<input class="value-input" placeholder="0">
-				<span class="unit">Kg</span>
-			</div>
-		</div>
-
-		<div class="value-container">
-			<div class="value-category">활동량</div>
-			<div class="value-select-wrapper">
-				<input type="radio" id="very-low" name="activity"
-					class="value-select-radio" hidden checked> <label
-					for="very-low" class="value-select2">매우 적음</label> <input
-					type="radio" id="low" name="activity" class="value-select-radio"
-					hidden> <label for="low" class="value-select2">적음</label>
-
-				<input type="radio" id="medium" name="activity"
-					class="value-select-radio" hidden> <label for="medium"
-					class="value-select2">보통</label> <input type="radio" id="high"
-					name="activity" class="value-select-radio" hidden> <label
-					for="high" class="value-select2">많음</label>
-			</div>
-
-			<div class="value-detail-wrapper" id="activity-detail">
-				<div class="value-detail" id="activity-main">거의 앉아서 생활</div>
-				<div class="value-detail" id="activity-sub">(사무직, 재택근무 등)</div>
-			</div>
-		</div>
-
-		<a class="btn-next" th:href="@{/inputdata2}">다음</a>
-	</div>
+			<button type="submit" class="btn-next">다음</button>
+		</form>
 </div>
 <!-- JavaScript -->
 <th:block layout:fragment="script">
